Implemented Flask/HTML based user interface tool. Implemented command line interface main.py. Implemented a image synthesizer to generate random shape images with ground truth edges. Implemented script to optimize canny parameters using the generated shape images. Generated writeup for the project.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ Screenshot*
 
 # Ignore data in data/input/ but keep the three key images from the project
 data/input/*
+data/simulated/
+data/output/
 !data/input/cameraman.tif
 !data/input/fishingboat.tif
 !data/input/lena.bmp
+
+# Ignore files for the assignment submission
+processed_examples/*
+swanson_python1_submission.zip
